# vybe

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: DECISIONS.md  GLOSSARY.md  LEGACY_FLOW.md  ROADMAP.md  VISION.md
examples/: dots.rs  dots_tune.rs  dots_tune_xy.rs  feedback.rs  feedback_trail.rs  layers_aurora.rs  layers_blend.rs  layers_over.rs  osc.rs  particles.rs  particles_galaxy.rs  particles_rain.rs  particles_swarm.rs  rainbow.rs  rainbow_trails.rs
src/: gpu.rs  lib.rs  recipe.rs  shell.rs  sugar.rs  tests.rs  tune.rs  tweak.rs
src/shaders/: composite.wgsl  feedback.wgsl  particles.wgsl  points.wgsl  present.wgsl  shape.wgsl  tweak_panel.wgsl
tests/: api.rs
